# mnemo

./: .env.baseline-nomic  .gitignore  README.md  docker-compose.yml  pyproject.toml
eval/: queries.yaml  run_eval.py
eval/results/: 20260527-102448-baseline.md  20260527-182734-bge-m3.md
services/api/: pyproject.toml
services/api/src/mnemo_api/: __main__.py  app.py  config.py  deps.py  schemas.py
services/core/: pyproject.toml
services/core/src/mnemo_core/: config.py  embedder.py  indexer.py
services/ingest/: pyproject.toml
services/ingest/src/mnemo_ingest/: __main__.py  chunker.py  config.py  embedder.py  indexer.py  models.py  parser.py
services/watch/: pyproject.toml
services/watch/src/mnemo_watch/: __main__.py  config.py  handler.py  reindex.py
