[project]
name = "mnemo-api"
version = "0.1.0"
description = "FastAPI service: query the Mnemo RAG index"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "mnemo-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo_api"]

[tool.uv.sources]
mnemo-core = { workspace = true }
