[project]
name = "mnemo-core"
version = "0.1.0"
description = "Mnemo shared core: config, models, embedder, indexer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "qdrant-client>=1.11",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo_core"]
