[project]
name = "mnemo-ingest"
version = "0.1.0"
description = "Ingestion service: parse vault, chunk, embed, upsert to Qdrant"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "qdrant-client>=1.11",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-frontmatter>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo_ingest"]
