[project]
name = "mnemo-watch"
version = "0.1.0"
description = "Filesystem watcher: auto-reindex changed vault files into Qdrant in real-time"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "python-frontmatter>=1.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "mnemo-core",
    "mnemo-ingest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo_watch"]

[tool.uv.sources]
mnemo-core = { workspace = true }
mnemo-ingest = { workspace = true }
